add ceo optimization

--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    
+    <meta name="description" content="Temir Tulpor - Skuterlar , Bike , Bayk haqida yangiliklar, sharhlar va texnik xizmat ko'rsatish bo'yicha maslahatlar sayti." />
+    <meta name="keywords" content="Temir Tulpor, Skuterlar , Bike , Bayk  yangiliklari, Skuterlar , Bike , Bayk  sharhlari" />
+    <meta name="robots" content="index, follow" />
+    
+    <meta property="og:title" content="Temir Tulpor - Skuterlar , Bike , Bayk  haqida to'liq qo'llanma" />
+    <meta property="og:description" content="Temir Tulpor saytida Skuterlar , Bike , Bayk  haqida yangiliklar va texnik maslahatlar bilan tanishing." />
+    <meta property="og:image" content="/path/to/social-image.jpg" />
+    <meta property="og:url" content="https://temir-tulpor.uz" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Teglar -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Temir Tulpor - Skuterlar , Bike , Bayk  ekspertizi" />
+    <meta name="twitter:description" content="Skuterlar , Bike , Bayk  haqida yangiliklar va texnik maslahatlar Temir Tulpor saytida." />
+    <meta name="twitter:image" content="/path/to/twitter-image.jpg" />
+
+    <title>Temir Tulpor</title>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
